--- a/css/main.css
+++ b/css/main.css
@@ -263,9 +263,6 @@ header nav ul li a{
 	padding: 0;
 }*/
 
-<<<<<<< HEAD
-
-
 
 .address p {
 	font-size: 1.0em;
@@ -274,7 +271,7 @@ header nav ul li a{
 	padding-top: 0.1rem;
 	word-wrap: break-word;
 	width: 34rem;
-=======
+}
 .reviews {
 	color: #333;
 	font-size: 1em;
@@ -282,7 +279,6 @@ header nav ul li a{
 
 .address {
 	font-size: 1em;
->>>>>>> 9f93b47e00d28fd7fd696a5d00e74d832aadb3c0
 }
 
 /*The widths are in a percentage!*/
@@ -308,11 +304,10 @@ footer span {
 	text-transform: lowercase;
 
  }
-<<<<<<< HEAD
 
-=======
->>>>>>> 9f93b47e00d28fd7fd696a5d00e74d832aadb3c0
+
 /*------------TABLET-------------*/
+	
 
 @media all and (min-width: 768px){
 
@@ -402,7 +397,6 @@ header nav ul li {
 
 .bottom-section{
 	display: flex;
-<<<<<<< HEAD
 	/*align-content: center;*/
 }
 
@@ -455,7 +449,6 @@ header nav ul li {
 
 .section-three h3 {
 	font-size: 1.0rem;	
-=======
 	flex-direction: row;
 	flex-wrap: nowrap;
 	padding: 34px;
@@ -471,10 +464,8 @@ header nav ul li {
 }
 .section-three p{
 	padding-bottom: 8px;	
->>>>>>> 9f93b47e00d28fd7fd696a5d00e74d832aadb3c0
 }	
 	
-
 .section-three {
 	border-top: 1px solid #eee;
 	height: 12.6rem;
@@ -599,7 +590,6 @@ header nav ul li {
 
 .bottom-section{
 	display: flex;
-<<<<<<< HEAD
 	/*align-content: center;*/
 }
 
@@ -629,12 +619,9 @@ header nav ul li {
 	text-align: justify;
 	word-wrap: break-word;
 	width: 86%;
-=======
 	flex-direction: row;
 	flex-wrap: nowrap;
 	font-size: 13px;
-
->>>>>>> 9f93b47e00d28fd7fd696a5d00e74d832aadb3c0
 }	
 
 .section-two h3 {
